--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ opt-level = 3
 
 [dependencies]
 bevy = { version = "0.15.1", features = ["dynamic_linking"] }
+bevy_asset_loader = { version = "0.22.0" , features = ["3d"]}
 bevy_water = "0.15.2"
 
 [target.wasm32-unknown-unknown]
