--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ opt-level = 3
 [dependencies]
 bevy = { version = "0.15.1", features = ["dynamic_linking"] }
 bevy_asset_loader = { version = "0.22.0" , features = ["3d"]}
+bevy_capture = { version = "0.2.0", features = ["gif"] }
 bevy_water = "0.15.2"
 
 [target.wasm32-unknown-unknown]
